<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_red"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/redMenuTitle"></item>
        <item android:id="@+id/menu_green"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/greenMenuTitle"></item>
        <item android:id="@+id/menu_blue"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/blueMenuTitle"></item>
    </group>

</menu>